Added support for specifying config index in SimConnect.cfg

--- a/src/CTrue.FsConnect.TestConsole/Properties/launchSettings.json
+++ b/src/CTrue.FsConnect.TestConsole/Properties/launchSettings.json
@@ -3,6 +3,14 @@
     "FsConnectTestConsole": {
       "commandName": "Project",
       "commandLineArgs": "-h 127.0.0.1 -p 500"
+    },
+    "FsConnectTestConsole1": {
+      "commandName": "Project",
+      "commandLineArgs": "-i 0"
+    },
+    "FsConnectTestConsole2": {
+      "commandName": "Project",
+      "commandLineArgs": ""
     }
   }
 }
