--- a/src/CTrue.FsConnect.TestConsole/Properties/launchSettings.json
+++ b/src/CTrue.FsConnect.TestConsole/Properties/launchSettings.json
@@ -2,7 +2,15 @@
   "profiles": {
     "FsConnectTestConsole": {
       "commandName": "Project",
-      "commandLineArgs": "-h 192.168.1.174 -p 57490"
+      "commandLineArgs": "-h 127.0.0.1 -p 500"
+    },
+    "FsConnectTestConsole1": {
+      "commandName": "Project",
+      "commandLineArgs": "-i 0"
+    },
+    "FsConnectTestConsole2": {
+      "commandName": "Project",
+      "commandLineArgs": ""
     }
   }
 }
