--- a/src/CTrue.FsConnect/CTrue.FsConnect.csproj
+++ b/src/CTrue.FsConnect/CTrue.FsConnect.csproj
@@ -6,19 +6,20 @@
     <Product>Flight Simulator Connect</Product>
     <Copyright />
     <Description>An easy to use wrapper for SimConnect, for connection to Flight Simulator 2020.
-Contains SimConnect binaries, as distributed by the Flight Simulator 20202 SDK 0.6.1 release.</Description>
+Contains SimConnect binaries, as distributed by the Flight Simulator 20202 SDK 0.10.0 release.</Description>
     <Authors>C-True</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <RepositoryUrl>https://github.com/c-true/FsConnect</RepositoryUrl>
     <PackageTags>msfs flight-simulator simconnect</PackageTags>
-    <Version>1.0.3</Version>
+    <Version>1.1.1</Version>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <PackageReleaseNotes>Support for using predefined SimConnect.cfg or specifying location for where it should be written.
-Verified that dependencies are the same for the SDK 0.6.1 release.</PackageReleaseNotes>
-    <AssemblyVersion>1.0.3.0</AssemblyVersion>
-    <FileVersion>1.0.3.0</FileVersion>
+    <PackageReleaseNotes>Default location for writing SimConnect.cfg file changed to Local, to avoid intefering with other SimConnect using applications/mods.
+Verified that dependencies are the same for the SDK 0.10.0 release.
+Support for all SimVars and units as enums, as documented by the SimVars example.</PackageReleaseNotes>
+    <AssemblyVersion>1.1.1.0</AssemblyVersion>
+    <FileVersion>1.1.1.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
