FsConnect targets .NET 4.5 * Uses SeriLog * Logging of events * Exception code * Clean up * Improved slew menu

--- a/src/CTrue.FsConnect/CTrue.FsConnect.csproj
+++ b/src/CTrue.FsConnect/CTrue.FsConnect.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net40</TargetFramework>
+    <TargetFramework>net45</TargetFramework>
     <Company>C-True</Company>
     <Product>Flight Simulator Connect</Product>
     <Copyright />
@@ -39,6 +39,10 @@ Contains SimConnect binaries, as distributed by the Flight Simulator 20202 SDK 0
     <None Include="..\Dependencies\SimConnect\build\CTrue.FsConnect.targets" Visible="false" Pack="true" PackagePath="build" />
     <None Include="..\Dependencies\SimConnect\lib\net40\Microsoft.FlightSimulator.SimConnect.dll" Visible="false" Pack="true" PackagePath="lib\net40" />
     <None Include="licenses\LICENSE.txt" Pack="true" PackagePath="$(PackageLicenseFile)" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Serilog" Version="2.10.0" />
   </ItemGroup>
 
 </Project>
