--- a/src/CTrue.FsConnect.TestConsole/CTrue.FsConnect.TestConsole.csproj
+++ b/src/CTrue.FsConnect.TestConsole/CTrue.FsConnect.TestConsole.csproj
@@ -15,6 +15,8 @@
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.8.0" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
