General API improvements and examples  (#10)

--- a/src/CTrue.FsConnect.TestConsole/Properties/launchSettings.json
+++ b/src/CTrue.FsConnect.TestConsole/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "FsConnectTestConsole": {
       "commandName": "Project",
-      "commandLineArgs": "-h localhost -p 500"
+      "commandLineArgs": "-h localhost -p 500 -l Debug"
     }
   }
 }
