--- a/src/CTrue.FsConnect.TestConsole/CTrue.FsConnect.TestConsole.csproj
+++ b/src/CTrue.FsConnect.TestConsole/CTrue.FsConnect.TestConsole.csproj
@@ -15,9 +15,12 @@
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.8.0" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CTrue.FsConnect.Managers\CTrue.FsConnect.Managers.csproj" />
     <ProjectReference Include="..\CTrue.FsConnect\CTrue.FsConnect.csproj" />
   </ItemGroup>
 
