--- a/src/tools/CTrue.FsConnect.FsEnumGenerator/CTrue.FsConnect.FsEnumGenerator.csproj
+++ b/src/tools/CTrue.FsConnect.FsEnumGenerator/CTrue.FsConnect.FsEnumGenerator.csproj
@@ -3,6 +3,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net472</TargetFramework>
+    <RootNamespace>FsEnumGenerator</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.8.0" />
+  </ItemGroup>
 
 </Project>
