--- a/src/CTrue.FsConnect.Managers/CTrue.FsConnect.Managers.csproj
+++ b/src/CTrue.FsConnect.Managers/CTrue.FsConnect.Managers.csproj
@@ -11,6 +11,7 @@
         - Aircraft information
         - Retrieving sim objects
         - Setting world time
+        - Controlling COM radios
     </Description>
     <Authors>C-True</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -18,11 +19,11 @@
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <RepositoryUrl>https://github.com/c-true/FsConnect</RepositoryUrl>
     <PackageTags>msfs flight-simulator simconnect</PackageTags>
-    <Version>1.3.1</Version>
+    <Version>1.3.2</Version>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <PackageReleaseNotes />
-    <AssemblyVersion>1.3.1.0</AssemblyVersion>
-    <FileVersion>1.3.1.0</FileVersion>
+    <PackageReleaseNotes>Added RadioManager for controlling COM radios.</PackageReleaseNotes>
+    <AssemblyVersion>1.3.2.0</AssemblyVersion>
+    <FileVersion>1.3.2.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
