Updated manager project description

--- a/src/CTrue.FsConnect.Managers/CTrue.FsConnect.Managers.csproj
+++ b/src/CTrue.FsConnect.Managers/CTrue.FsConnect.Managers.csproj
@@ -11,7 +11,8 @@
         - Aircraft information
         - Retrieving sim objects
         - Setting world time
-        - Controlling COM radios
+        - Controlling COM and NAV radios
+        - Initial Autopilot manager
     </Description>
     <Authors>C-True</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
