--- a/src/tools/CTrue.FsConnect.FsEnumGenerator/CTrue.FsConnect.FsEnumGenerator.csproj
+++ b/src/tools/CTrue.FsConnect.FsEnumGenerator/CTrue.FsConnect.FsEnumGenerator.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net472</TargetFramework>
+    <TargetFramework>net481</TargetFramework>
     <RootNamespace>FsEnumGenerator</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommandLineParser" Version="2.8.0" />
+    <PackageReference Include="CommandLineParser" />
   </ItemGroup>
 
 </Project>
