Updated to latest MSFS SDK version 0.24.3.0 * Generalized input event mapping

--- a/src/NuGet.config
+++ b/src/NuGet.config
@@ -5,9 +5,13 @@
   </config>
   <packageSources>
     <clear />
+	<add key="ProducedPackages" value="..\artifacts\packages" />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
   </packageSources>
   <packageSourceMapping>
+    <packageSource key="ProducedPackages">
+      <package pattern="*" />
+    </packageSource>  
     <packageSource key="nuget.org">
       <package pattern="*" />
     </packageSource>
