--- a/src/CTrue.FsConnect.TestConsole/Properties/launchSettings.json
+++ b/src/CTrue.FsConnect.TestConsole/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "FsConnectTestConsole": {
       "commandName": "Project",
-      "commandLineArgs": "-h 192.168.1.174 -p 500 -l Debug"
+      "commandLineArgs": "-h 192.168.1.174 -p 500 -l Debug -j 0"
     }
   }
 }
