--- a/src/tools/CTrue.FsConnect.FsEnumGenerator/CTrue.FsConnect.FsEnumGenerator.csproj
+++ b/src/tools/CTrue.FsConnect.FsEnumGenerator/CTrue.FsConnect.FsEnumGenerator.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net472</TargetFramework>
-    <RootNamespace>FsEnumGenerator</RootNamespace>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net461</TargetFramework>
+		<RootNamespace>FsEnumGenerator</RootNamespace>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="CommandLineParser" Version="2.8.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="CommandLineParser" />
+	</ItemGroup>
 
 </Project>
