--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
       uses: microsoft/setup-msbuild@v1.0.2
     
     - name: Create artifacts\packages folder
-      uses: mk artifacts\packages
+      run: mk artifacts\packages
 
     - name: Setup NuGet
       uses: NuGet/setup-nuget@v1.0.5
